matterbridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matterbridge
  labels:
    app.kubernetes.io/name: matterbridge
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: matterbridge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matterbridge
    spec:
      containers:
        - name: matterbridge
          image: 42wim/matterbridge:1.26.0
          imagePullPolicy: IfNotPresent
          args:
            - -conf
            - /etc/matterbridge/matterbridge.toml
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: rendered-config
              mountPath: /etc/matterbridge
              readOnly: true
      volumes:
        - name: config-template
          configMap:
            name: matterbridge-config
        - name: rendered-config
          emptyDir: {}
