ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost
  namespace: mattermost
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - yourown.chat
      secretName: yourown-chat-tls
    # - hosts:
    #     - rtcd.yourown.chat
    #   secretName: yourown-chat-rtcd-tls
  rules:
    - host: yourown.chat
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yourown-chat
                port:
                  number: 8065
    # - host: rtcd.yourown.chat
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: yourown-chat-rtcd
    #             port:
    #               number: 8443
